--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
     "dev-setup": "pnpm install",
     "start-setup": "pnpm install ",
     "preinstall": "npx only-allow pnpm",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "email": "email dev"
   },
   "dependencies": {
+    "@react-email/components": "0.0.16",
+    "@react-email/render": "0.0.12",
     "@svgr/webpack": "^8.1.0",
     "@types/node": "18.15.11",
     "@types/react": "18.0.31",
@@ -32,15 +35,19 @@
     "react": "18.2.0",
     "react-autosuggest": "^10.1.0",
     "react-dom": "18.2.0",
+    "react-email": "2.1.1",
     "react-helmet-async": "^1.3.0",
     "react-icons": "^4.11.0",
     "react-spinners": "^0.13.8",
     "react-tooltip": "^5.20.0",
     "react-transition-state": "^2.1.0",
+    "resend": "^3.2.0",
+    "sonner": "^1.4.41",
     "tailwind-merge": "^2.2.0",
     "typescript": "5.0.3",
     "typewriter-effect": "^2.21.0",
-    "uuid": "9.0.0"
+    "uuid": "9.0.0",
+    "zod": "^3.23.4"
   },
   "devDependencies": {
     "@types/uuid": "^9.0.1",
