--- a/database/open_source/projects.json
+++ b/database/open_source/projects.json
@@ -1,8 +1,8 @@
 [
   {
-  "name": "Test",
-  "description": "Backend Links to be added",
-  "url": "https://google.com",
+  "name": "Tutorial 1",
+  "description": "",
+  "url": "https://drive.google.com/file/d/1z3uVHOlK1wci_2IhH-4dXHWQ6Esu8b5R/view?usp=drive_link",
   "category": "backend",
   "subcategory": "projects"
   }
